--- a/example/src/style.css
+++ b/example/src/style.css
@@ -26,11 +26,13 @@ body {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 20px;
   text-align: center;
+}
+
+.cat-area {
   display: grid;
-  grid-template-columns: repeat(3, 120px);
-  grid-template-rows: repeat(3, 120px);
+  grid-template-columns: repeat(3, 100px);
+  grid-template-rows: repeat(3, 100px);
 }
 
 .cat {
@@ -43,24 +45,34 @@ body {
   bottom: 0;
   right: 100%;
   background-color: currentColor;
-  height: 16px;
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-  width: 80px;
-  margin-right: -1px;
+  width: 14px;
+  border-radius: 8px;
+  border-bottom-right-radius: 0;
+  height: 60%;
+  margin-right: 1px;
 }
 
 .cat-tail::before {
   content: "";
   position: absolute;
-  bottom: 0;
-  left: 0;
+  top: 0;
+  right: 0;
   background-color: currentColor;
-  height: 24px;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  border-bottom-left-radius: 8px;
-  width: 16px;
+  width: 24px;
+  border-radius: 8px;
+  border-top-right-radius: 16px;
+  border-bottom-left-radius: 100%;
+  height: 16px;
+}
+
+.cat-tail::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 100%;
+  background-color: currentColor;
+  width: 3px;
+  height: 16px;
 }
 
 .cat-ears {
@@ -90,8 +102,8 @@ body {
 .cat-ears > li:nth-child(2)::after {
   content: "";
   background-color: currentColor;
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   transform: rotate(45deg);
   transform-origin: center;
   border-radius: 3px;
@@ -140,4 +152,5 @@ body {
   padding: 0;
   transition: opacity 0.1s ease-out;
   z-index: 9;
+  cursor: wait;
 }
