--- a/example/src/style.css
+++ b/example/src/style.css
@@ -4,9 +4,14 @@
   line-height: 24px;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: #19323c;
-  background-color: #f3f7f0;
+  color: #0c1821;
+  background-color: #fff;
+  background-image: linear-gradient(
+    109.6deg,
+    rgba(17, 151, 147, 1) 11.2%,
+    rgba(154, 214, 212, 1) 55.4%,
+    rgba(255, 233, 171, 1) 100.2%
+  );
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,138 +24,20 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.cat-area {
-  display: grid;
-  grid-template-columns: repeat(3, 100px);
-  grid-template-rows: repeat(3, 100px);
-}
-
-.cat {
-  position: relative;
-  color: #19323c;
-}
-
-.cat-tail {
-  position: absolute;
-  bottom: 0;
-  right: 100%;
-  background-color: currentColor;
-  width: 14px;
-  border-radius: 8px;
-  border-bottom-right-radius: 0;
-  height: 60%;
-  margin-right: 1px;
-}
-
-.cat-tail::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: currentColor;
-  width: 24px;
-  border-radius: 8px;
-  border-top-right-radius: 16px;
-  border-bottom-left-radius: 100%;
-  height: 16px;
-}
-
-.cat-tail::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 100%;
-  background-color: currentColor;
-  width: 3px;
-  height: 16px;
-}
-
-.cat-ears {
-  display: grid;
-  grid-template-columns: 50% 40% 50%;
-  grid-template-rows: 1fr;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  position: absolute;
-  overflow: hidden;
-  left: 0;
-  width: 100%;
-  transform: translateY(-50%);
-}
-
-.cat-ears > li {
+.app {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  box-sizing: content-box;
-  height: 24px;
-  padding-top: 8px;
 }
 
-.cat-ears > li:nth-child(2)::before,
-.cat-ears > li:nth-child(2)::after {
-  content: "";
-  background-color: currentColor;
-  width: 18px;
-  height: 18px;
-  transform: rotate(45deg);
-  transform-origin: center;
-  border-radius: 3px;
-}
-
-.cat-head {
-  display: grid;
-  grid-template-columns: repeat(5, 33.3333%);
-  grid-template-rows: repeat(5, 33.3333%);
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  box-sizing: border-box;
-  overflow: hidden;
-  border: 2px solid currentColor;
-  background-color: currentColor;
+.code {
+  height: 470px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   border-radius: 16px;
-  border-bottom-left-radius: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9;
-  position: relative;
-}
-
-.cat-head li {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.cat-head li:nth-child(13)::before,
-.cat-head li:nth-child(13)::after {
-  content: "";
-  width: 25%;
-  height: 25%;
-  border-radius: 50%;
-  background-color: currentColor;
-  box-shadow: 0 0 0 2px #fee440;
-}
-
-.position {
-  cursor: pointer;
-  background-color: transparent;
-  border: 0;
-  margin: 0;
-  padding: 0;
-  transition: opacity 0.1s ease-out;
-  z-index: 9;
-  cursor: wait;
+  overflow: hidden;
 }
